fix for elements with height:100% to not overlap the footer

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -120,6 +120,10 @@ h3, h4, h5 { font-size: 1rem; }
   padding-top: 1rem;
 }
 
+.sidebar {
+  display: flex;
+  flex-direction: column;
+}
 
 /* Pagination */
 .blog-pagination {
